--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    user-select: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    scroll-behavior: smooth;
+}
+
+body {
+    margin: 0;
+    background-color: #292a2d !important;
+    color: #868e96 !important;
+}
+
+.intro {
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: var(--theme-ui-colors-divide, #cbd5e0);
+}
+
+.intro__text {
+    text-align: center;
+    font-size: 20px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: rgb(255, 255, 255);
+}
+
+@media (max-width:1500px) {
+    .navbar {
+        width: 30vw;
+    }
+}
+
+@media (max-width:1280px) {
+    .home__complete-name--Mauricio,
+    .home__complete-name--Marinkovich {
+        font-size: 7rem;
+    }
+    .home__developer--frontend {
+        font-size: 2rem;
+    }
+    .navbar {
+        width: 40vw;
+    }
+}
+
+@media (max-width:800px) {
+    .home__complete-name--Mauricio,
+    .home__complete-name--Marinkovich {
+        font-size: 5rem;
+    }
+    .home__developer--frontend {
+        font-size: 1.7rem;
+    }
+    .navbar {
+        width: 60vw;
+    }
+}
+
+@media (max-width:600px) {
+    .navbar {
+        width: 75vw;
+    }
+}
+
+@media (max-width:500px) {
+    .home__complete-name--Mauricio,
+    .home__complete-name--Marinkovich {
+        font-size: 3rem;
+    }
+    .home__developer--frontend {
+        font-size: 1.4rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .navbar__hamburguer {
+        z-index: 998;
+    }
+    .navbar__name {
+        font-size: 30px;
+    }
 }
