--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
 
 body {
     margin: 0;
-    background-color: #292a2d !important;
-    color: #868e96 !important;
+    color: #3f434c !important;
+    font-family: 'Gibson', sans-serif
 }
 
 .intro {
@@ -21,6 +21,7 @@ body {
 .intro__text {
     text-align: center;
     font-size: 20px;
+    color: white;
 }
 
 h1,
@@ -29,7 +30,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 @media (max-width:1500px) {
@@ -41,9 +42,9 @@ h6 {
 @media (max-width:1280px) {
     .home__complete-name--Mauricio,
     .home__complete-name--Marinkovich {
-        font-size: 7rem;
+        font-size: 8rem;
     }
-    .home__developer--frontend {
+    .home__developer {
         font-size: 2rem;
     }
     .navbar {
@@ -54,9 +55,9 @@ h6 {
 @media (max-width:800px) {
     .home__complete-name--Mauricio,
     .home__complete-name--Marinkovich {
-        font-size: 5rem;
+        font-size: 6rem;
     }
-    .home__developer--frontend {
+    .home__developer {
         font-size: 1.7rem;
     }
     .navbar {
@@ -65,6 +66,10 @@ h6 {
 }
 
 @media (max-width:600px) {
+    .home__complete-name--Mauricio,
+    .home__complete-name--Marinkovich {
+        font-size: 5rem;
+    }
     .navbar {
         width: 75vw;
     }
@@ -73,18 +78,29 @@ h6 {
 @media (max-width:500px) {
     .home__complete-name--Mauricio,
     .home__complete-name--Marinkovich {
-        font-size: 3rem;
+        font-size: 4.2rem;
     }
-    .home__developer--frontend {
+    .home__developer {
         font-size: 1.4rem;
     }
 }
 
 @media (max-width: 400px) {
+    .home__complete-name--Mauricio,
+    .home__complete-name--Marinkovich {
+        font-size: 3.2rem;
+    }
     .navbar__hamburguer {
         z-index: 998;
     }
     .navbar__name {
         font-size: 30px;
+    }
+}
+
+@media (max-width: 300px) {
+    .home__complete-name--Mauricio,
+    .home__complete-name--Marinkovich {
+        font-size: 2.7rem;
     }
 }
