Se modifica la pagina

--- a/src/pages/proyects/proyects.css
+++ b/src/pages/proyects/proyects.css
@@ -1,4 +1,4 @@
 .proyects{
     background-image: -webkit-linear-gradient(45deg, #692b61 0%, #e49854 100%);
-    padding: 3em
+    padding: 3em 0;
 }
