Se modifica la pagina

--- a/src/Components/wave/wave.css
+++ b/src/Components/wave/wave.css
@@ -22,7 +22,7 @@
 
 .waves {
   position:relative;
-  width: 100vw;
+  min-width: 100vw;
   height: 15vh;
   margin-bottom:-7px; 
   min-height:100px;
