--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@
 body {
     margin: 0;
     color: #3f434c !important;
-    font-family: 'Gibson', sans-serif
+    font-family: 'Gibson', sans-serif;
+    overflow-x: hidden;
 }
 
 .intro {
