--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 .intro {
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    border-bottom-color: var(--theme-ui-colors-divide, #cbd5e0);
+    border-bottom-color: var(--theme-ui-colors-divide, #bea187);
 }
 
 .intro__text {
@@ -30,7 +30,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: rgb(0, 0, 0);
+    color: #bea187;
 }
 
 @media (max-width:1500px) {
