--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -4,7 +4,7 @@
     right: 0;
     width: 20vw;
     height: 100%;
-    background-color: #292a2d;
+    background-color: #17202A ;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -29,25 +29,28 @@
 }
 
 .navbar__name {
-    color: rgb(251, 207, 101);
+    color: white;
     text-decoration: none;
     font-size: 40px;
     text-align: center;
 }
 
 .navbar__name:hover {
-    color: rgb(251, 207, 101);
+    color: white;
 }
 
 .navbar__menu {
-    color: #fff;
+    color: white;
     text-decoration: none;
     font-size: 20px;
-    text-align: center;
+    border-radius: 1rem;
+    width: 80%;
+    padding: 1rem;
 }
 
 .navbar__menu:hover {
-    color: rgb(251, 207, 101);
+    color: white;
+    background: #1a83ff;
 }
 
 .spread {
