Se modifica gran parte de la pagina

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
     margin: 0;
     color: #3f434c !important;
     font-family: 'Gibson', sans-serif;
-    overflow-x: hidden;
 }
 
 .intro {
@@ -104,4 +103,46 @@ h6 {
     .home__complete-name--Marinkovich {
         font-size: 2.7rem;
     }
+}
+
+.animationDuration-2000ms{
+    display: inline-block;
+    animation: bounce;
+    animation-duration: 2000ms; 
+}
+
+.animationDuration-2500ms{
+    display: inline-block;
+    animation: bounce;
+    animation-duration: 2.5s; 
+}
+
+.animationDuration-3000ms{
+    display: inline-block;
+    animation: bounce;
+    animation-duration: 3000ms; 
+}
+
+.animationDuration-3500ms{
+    display: inline-block;
+    animation: bounce;
+    animation-duration: 3500ms; 
+}
+
+.animationDuration-4000ms{
+    display: inline-block;
+    animation: bounce;
+    animation-duration: 4000ms; 
+}
+
+.animationDuration-4500ms{
+    display: inline-block;
+    animation: bounce;
+    animation-duration: 4500ms; 
+}
+
+.animationDuration-5000ms{
+    display: inline-block;  
+    animation: bounce;
+    animation-duration: 5000ms; 
 }
