Se cambia la foto en la seccion Sobre Mi

--- a/src/Components/info-about-me/info-about-me.css
+++ b/src/Components/info-about-me/info-about-me.css
@@ -2,10 +2,10 @@
     height: 260px;
     width: 260px;
     border-radius: 160px;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(../../Images/About-me/MarinkovichMauricioYannick.jpg);
+    background-image: url(../../Images/About-me/MauricioMarinkovich.jpg);
 }
 
 .about-me__info {
