--- a/src/Components/proyects/proyectElement.css
+++ b/src/Components/proyects/proyectElement.css
@@ -7,6 +7,7 @@
 .cardProyect{
     max-width: 260px;
     min-height: 460px;
+    margin: 20px;
     border-radius: 6px;
     overflow: hidden;
     background-color: white;
