--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -1,56 +1,31 @@
 .navbar {
     position: fixed;
-    top: 0;
-    right: 0;
-    width: 20vw;
-    height: 100%;
-    background-color: #17202A ;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    transition: transform .3s ease-in-out;
-    transform: translate(110%);
-    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
-    z-index: 999;
-}
-
-.navbar__hamburguer {
-    position: fixed;
-    top: 30px;
-    right: 30px;
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    border-radius: 10px;
-    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
-    background-color: #fbcf65;
+    width: 100%;
+    background-color: #731007 !important;
     z-index: 1000;
+    box-shadow: 0 1px 5px 0 black;
 }
 
-.navbar__name {
-    color: white;
-    text-decoration: none;
-    font-size: 40px;
-    text-align: center;
+.navbar-collapse{
+    justify-content: center;
+    align-items: center;
 }
 
-.navbar__name:hover {
-    color: white;
+.nav-item{
+    padding: 0 20px;
 }
 
 .navbar__menu {
-    color: white;
+    color: white !important;
     text-decoration: none;
     font-size: 20px;
     border-radius: 1rem;
-    width: 80%;
     padding: 1rem;
 }
 
 .navbar__menu:hover {
-    color: white;
-    background: #1a83ff;
+    color: white !important;
+    background: #9c5446;
 }
 
 .spread {
