--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,7 @@
 body {
     margin: 0;
     color: #3f434c !important;
-    font-family: 'Gibson', sans-serif;
-}
-
-.intro {
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    border-bottom-color: var(--theme-ui-colors-divide, #bea187);
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .intro__text {
@@ -30,83 +24,29 @@ h4,
 h5,
 h6 {
     font-weight:bold;
-    color: #bea187;
+    color: white;
 }
 
-@media (max-width:1500px) {
-    .navbar {
-        width: 30vw;
-    }
-}
-
-@media (max-width:1400px) {
-    .home__complete-name--Mauricio,
-    .home__complete-name--Marinkovich {
-        font-size: 7.5rem;
-    }
-}
-
-@media (max-width:1280px) {
-    .home__complete-name--Mauricio,
-    .home__complete-name--Marinkovich {
-        font-size: 8rem;
-    }
-    .home__developer {
-        font-size: 2rem;
-    }
-    .navbar {
-        width: 40vw;
-    }
-}
-
-@media (max-width: 1200px) {
-    .home__complete-name--Mauricio,
-    .home__complete-name--Marinkovich {
-        font-size: 6rem;
-    }
-}
-
-@media (max-width:600px) {
-    .home__complete-name--Mauricio,
-    .home__complete-name--Marinkovich {
-        font-size: 5rem;
-    }
-    .navbar {
-        width: 75vw;
-    }
-    .about-me__skills--language-list{
-        font-size: 0.8em;
-    }
-}
-
-@media (max-width:500px) {
-    .home__complete-name--Mauricio,
-    .home__complete-name--Marinkovich {
-        font-size: 4.2rem;
-    }
-    .home__developer {
-        font-size: 1.4rem;
+@media (max-width: 991px) {
+    .home__skills{
+        margin-top: 0 !important;
+    } 
+    .home__name{
+        margin-bottom: 10px !important;
     }
 }
 
 @media (max-width: 400px) {
-    .home__complete-name--Mauricio,
-    .home__complete-name--Marinkovich {
-        font-size: 3.2rem;
+    .home__name{
+        margin-top: 20vh !important;
     }
-    .navbar__hamburguer {
-        z-index: 998;
-    }
-    .navbar__name {
-        font-size: 30px;
+    .home__complete-name, .home__fullstack{
+        font-size: 2rem;
     }
 }
 
 @media (max-width: 300px) {
-    .home__complete-name--Mauricio,
-    .home__complete-name--Marinkovich {
-        font-size: 2.7rem;
-    }
+    
 }
 
 .AnimationDelay-2000ms{
