--- a/src/pages/about-me/about-me.css
+++ b/src/pages/about-me/about-me.css
@@ -1,5 +1,4 @@
 .about-me {
-    border-radius: 15px;
     padding: 1em 1em 0;
     display: flex;
     flex-direction: column;
@@ -8,6 +7,8 @@
     display: flex;
     align-items: center;
     font-size: 20px;
+    background: linear-gradient(rgb(187, 139, 129), #d1b1a9, #731007);
+    box-shadow: 0px 0px 5px 1px black;
 }
 
 .button {
@@ -17,9 +18,15 @@
     transition: color 0.3s, background-color 0.3s;
     border-radius: 30px;
     font-weight: 900;
-    background-color: rgb(251, 207, 101);
-    color: #000;
+    background-color: rgb(115, 16, 7);
+    color: white;
     width: 100%;
+    box-shadow: 0 0 5px 1px black;
+}
+
+.button:hover{
+    color: white;
+    background-color: #9c5446;
 }
 
 .margin{
