--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -7,3 +7,12 @@
 .contact__content--btn {
     margin-left: 20px;
 }
+
+.contact--title{
+    margin-top: 70px;
+    padding: 15px;
+    background-color: #731007;
+    filter: drop-shadow(8px 8px #9c5446);
+    display: flex;
+    justify-content: center;
+}
